--- a/index.html
+++ b/index.html
@@ -66,49 +66,49 @@
 
       <li class="item-lista">
         <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank" rel="noopener noreferrer">
-          <img title="HTML5" src="./assets/icons/html.svg" alt="Logo da linguagem de marcação HTML5">
+          <img title="HTML5" src="./assets/icons/html.svg" alt="Logo da linguagem de marcação HTML5" class="img-habilidade-hover">
         </a>
       </li>
 
       <li class="item-lista">
         <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank" rel="noopener noreferrer">
-          <img title="CSS3" src="./assets/icons/css.svg" alt="Logo da linguagem de estilo CSS3 ">
+          <img title="CSS3" src="./assets/icons/css.svg" alt="Logo da linguagem de estilo CSS3" class="img-habilidade-hover">
         </a>
       </li>
 
       <li class="item-lista">
         <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank" rel="noopener noreferrer">
-          <img title="JavaScript" src="./assets/icons/javascript.svg" alt="Logo da linguagem javascript ">
+          <img title="JavaScript" src="./assets/icons/javascript.svg" alt="Logo da linguagem javascript" class="img-habilidade-hover">
         </a>
       </li>
 
       <li class="item-lista">
         <a href="https://www.adobe.com/br/products/xd.html" target="_blank" rel="noopener noreferrer">
-          <img title="AdobeXD" src="./assets/icons/Adobe-XD.svg" alt="Logo da ferramenta de design AdobeXD">
+          <img title="AdobeXD" src="./assets/icons/Adobe-XD.svg" alt="Logo da ferramenta de design AdobeXD" class="img-habilidade-hover">
         </a>
       </li>
 
       <li class="item-lista">
         <a href="https://www.mysql.com/" target="_blank" rel="noopener noreferrer">
-          <img title="MYSQL" src="./assets/icons/mysql.svg" alt="Logo do SGBD MYSQL">
+          <img title="MYSQL" src="./assets/icons/mysql.svg" alt="Logo do SGBD MYSQL" class="img-habilidade-hover">
         </a>
       </li>
 
       <li class="item-lista">
         <a href="https://git-scm.com/" target="_blank" rel="noopener noreferrer">
-          <img title="Git" src="./assets/icons/git.svg" alt="Logo do sistema de controle de versões Git">
+          <img title="Git" src="./assets/icons/git.svg" alt="Logo do sistema de controle de versões Git" class="img-habilidade-hover">
         </a>
       </li>
 
       <li class="item-lista">
         <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-          <img title="Github" src="./assets/icons/github.svg" alt="Logo da plataforma de hospedagem github de código-fonte e arquivos com controle de versão">
+          <img title="Github" src="./assets/icons/github.svg" alt="Logo da plataforma de hospedagem github de código-fonte e arquivos com controle de versão" class="img-habilidade-hover">
         </a>
       </li>
 
       <li class="item-lista">
         <a href="https://analytics.google.com/analytics/web/#/" target="_blank" rel="noopener noreferrer">
-          <img title="Google Analytics" src="./assets/icons/Google-Analytics-logo.svg" alt="Logo da ferramenta de monitoramento Google Analytics">
+          <img title="Google Analytics" src="./assets/icons/Google-Analytics-logo.svg" alt="Logo da ferramenta de monitoramento Google Analytics" class="img-habilidade-hover">
         </a>
       </li>
     </ul>
@@ -123,7 +123,7 @@
       <ul class="container-card" title="IMC é um projeto feito em Flutter, com o intuito de utilizar novos Widgets, packages, POO e facilitar o cálculo do índice de massa corporal">
         <li>
           <a href="https://github.com/joaoquinto/Imc" target="_blank" rel="noopener noreferrer">
-            <img class="img-card" src="./assets/icons/imc.svg" alt="Uma imagem com fundo verde e com a sigla IMC">
+            <img class="img-card img-card-hover" src="./assets/icons/imc.svg" alt="Uma imagem com fundo verde e com a sigla IMC">
           </a>
         </li>
         <li>
@@ -142,7 +142,7 @@
       <ul class="container-card" title="Conversor é um projeto feito em Flutter, com o intuito de facilitar a conversão de unidades de medidas.">
         <li>
           <a href="https://joaoquinto.github.io/conversor/index.html?fbclid=IwAR1GL0yaGlreWgx8ss2Jo0HqkuQ8SkjNMvQoSR_fFMkhc4Hm_gI0TBfiFac#/" target="_blank" rel="noopener noreferrer">
-            <img class="img-card" src="./assets/icons/conversor.svg" alt="Uma imagem de um input vermelho e uma caixa de texto dizendo informe a sua quilometragem para converter para milha">
+            <img class="img-card img-card-hover" src="./assets/icons/conversor.svg" alt="Uma imagem de um input vermelho e uma caixa de texto dizendo informe a sua quilometragem para converter para milha">
           </a>
         </li>
         <li>
@@ -160,7 +160,7 @@
       <ul class="container-card" title="Login ui é uma tentativa de fazer um tela de login mobile em flutter">
         <li>
           <a href="https://github.com/joaoquinto/uiflutter/tree/master/login_ui" target="_blank" rel="noopener noreferrer">
-            <img class="img-card" src="./assets/icons/login.svg" alt="Uma imagem de uma tela de login mobile">
+            <img class="img-card img-card-hover" src="./assets/icons/login.svg" alt="Uma imagem de uma tela de login mobile">
           </a>
         </li>
         <li>
@@ -178,7 +178,7 @@
       <ul class="container-card" title="Tcompress é um projeto feito totalmente em Flutter, com o intuito de utilizar novos Widgets e packages e facilitar o cálculo da Taxa de Compressão de um motor">
         <li>
           <a href="https://joaoquinto.github.io/compress/web/#/" target="_blank" rel="noopener noreferrer">
-            <img class="img-card" src="./assets/icons/tcompress.svg" alt="Uma imagem de uma engrenagem com uma chave inglesa">
+            <img class="img-card img-card-hover" src="./assets/icons/tcompress.svg" alt="Uma imagem de uma engrenagem com uma chave inglesa">
           </a>
         </li>
         <li>
@@ -197,7 +197,7 @@
       <ul class="container-card" title="Natarajan é um template para exposição de fotos de modelos. Esse foi o meu primeiro site">
         <li>
           <a href="https://joaoquinto.github.io/natarajan/template/index.html" target="_blank" rel="noopener noreferrer">
-            <img class="img-card" src="./assets/icons/natarajan.svg" alt="Uma imagem de uma mulher com roupa de piloto de caça, sentada na grama">
+            <img class="img-card img-card-hover" src="./assets/icons/natarajan.svg" alt="Uma imagem de uma mulher com roupa de piloto de caça, sentada na grama">
           </a>
         </li>
         <li>
@@ -217,7 +217,7 @@
       <ul class="container-card" title="Get shape é uma plataforma de corrida, com o intuito de adquirir novos clientes e fazê-los entrar em forma no verão.">
         <li>
           <a href="https://joaoquinto.github.io/getshape/" target="_blank" rel="noopener noreferrer">
-            <img class="img-card" src="./assets/icons/getshape.svg" alt="Um imagem com uma mulher correndo">
+            <img class="img-card img-card-hover" src="./assets/icons/getshape.svg" alt="Um imagem com uma mulher correndo">
           </a>
         </li>
         <li>
@@ -239,7 +239,7 @@
       <ul class="container-card" title="Spacer é uma plataforma de coworking que contém espaços projetados para pessoas que prefeririam trabalhar em uma comunidade ao invés de uma empresa.">
         <li>
           <a href="https://joaoquinto.github.io/spacer/" target="_blank" rel="noopener noreferrer">
-            <img class="img-card" src="./assets/icons/spacer.svg" alt="Uma imagem de uma pessoa em um espaço de coworking">
+            <img class="img-card img-card-hover" src="./assets/icons/spacer.svg" alt="Uma imagem de uma pessoa em um espaço de coworking">
           </a>
         </li>
         <li>
@@ -261,7 +261,7 @@
       <ul class="container-card" title="Athena é uma plataforma de músicas, nela você pode encontrar o que há de melhor e mais recente no pop, country, reggae, rap e todos os outros tipos de música imagináveis. ">
         <li>
           <a href="https://joaoquinto.github.io/billie/index.html" target="_blank" rel="noopener noreferrer">
-            <img class="img-card" src="./assets/icons/billie-eilish.svg" alt="Uma imagem da cantora Billie Eilish, com um filtro alaranjado">
+            <img class="img-card img-card-hover" src="./assets/icons/billie-eilish.svg" alt="Uma imagem da cantora Billie Eilish, com um filtro alaranjado">
           </a>
         </li>
         <li>
@@ -284,7 +284,7 @@
   ">
         <li>
           <a href="https://joaoquinto.github.io/card-frontend-mentor/" target="_blank" rel="noopener noreferrer">
-            <img class="img-card" src="./assets/icons/column-preview.svg" alt="Uma imagem de três cards, cada um com um tipo de carro SEDAN, SUVS, Luxury">
+            <img class="img-card img-card-hover" src="./assets/icons/column-preview.svg" alt="Uma imagem de três cards, cada um com um tipo de carro SEDAN, SUVS, Luxury">
           </a>
         </li>
         <li>
@@ -306,7 +306,7 @@
       <ul class="container-card" title="Esse é um desafio da plataforma frontend mentor. É um card de exposição, para venda de NFT.">
         <li>
           <a href="https://joaoquinto.github.io/nft-card-componet/" target="_blank" rel="noopener noreferrer">
-            <img class="img-card" src="./assets/icons/ntf-preview.svg" alt="Uma imagem de um cubo vermelho, com partes azuis.">
+            <img class="img-card img-card-hover" src="./assets/icons/ntf-preview.svg" alt="Uma imagem de um cubo vermelho, com partes azuis.">
           </a>
         </li>
         <li>
@@ -328,7 +328,7 @@
       <ul class="container-card" title="Esse é um desafio da plataforma frontend mentor. É um card de exposição, para anúncio de uma plataforma de música e audiobooks.">
         <li>
           <a href="https://joaoquinto.github.io/summary-order/#" target="_blank" rel="noopener noreferrer">
-            <img class="img-card" src="./assets/icons/order-summary.svg" alt="Uma imagem de um card de propaganda de uma plataforma de música.">
+            <img class="img-card img-card-hover" src="./assets/icons/order-summary.svg" alt="Uma imagem de um card de propaganda de uma plataforma de música.">
           </a>
         </li>
         <li>
@@ -349,7 +349,7 @@
       <ul class="container-card" title="Esse é um desafio da plataforma frontend mentor. É um card para o escaneamento do QRcode.">
         <li>
           <a href="https://joaoquinto.github.io/qr-code-component/" target="_blank" rel="noopener noreferrer">
-            <img class="img-card" src="./assets/icons/card-component.svg" alt="Uma imagem de um QRcode azul que leva para a plataforma frontend mentor">
+            <img class="img-card img-card-hover" src="./assets/icons/card-component.svg" alt="Uma imagem de um QRcode azul que leva para a plataforma frontend mentor">
           </a>
         </li>
         <li>
@@ -424,6 +424,8 @@
     new window.VLibras.Widget('https://vlibras.gov.br/app');
   </script>
   <script type="module" src="./js/script.js"></script>
+  <script src="./js/vanilla-tilt.min.js"></script>
+  <script src="./js/vanilla-init.js"></script>
 </body>
 
 </html>
