Adicionando novo projeto ao portfolio

--- a/index.html
+++ b/index.html
@@ -367,6 +367,27 @@
           </ul>
         </li>
       </ul>
+      <ul class="container-card" title="Esse é um desafio da plataforma frontend mentor. É um card para o escaneamento do QRcode.">
+        <li>
+          <a href="https://joaoquinto.github.io/johnathan-specter/" target="_blank" rel="noopener noreferrer">
+            <img class="img-card img-card-hover" src="./assets/icons/johnathan-specter.svg" alt="Uma UI de portfólio do programador Johnathan Specter">
+          </a>
+        </li>
+        <li>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/johnathan-specter" target="_blank" rel="noopener noreferrer">
+              Johnathan Specter
+            </a>
+          </h3>
+        </li>
+        <li>
+          <ul class="container-infos">
+            <li><strong>HTML5</strong></li>
+            <li><strong>CSS3</strong></li>
+            <li><strong>Flexbox</strong></li>
+          </ul>
+        </li>
+      </ul>
     </div>
 
   </section>
