--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
   <section id="container-contato">
     <h2 class="title">Contato</h2>
     <ul id="contato">
-      <li><a href="mailto:joaovictoroliveirapereira6522@gmail.com" _blank" rel="noopener noreferrer">Email: Joaovictoroliveirapereira6522@gmail.com</a></li>
+      <li><a href="mailto:joaovictoroliveirapereira6522@gmail.com" target="_blank" rel="noopener noreferrer">Email: Joaovictoroliveirapereira6522@gmail.com</a></li>
       <li><a href="https://api.whatsapp.com/send/?phone=%2B5571991792684&text&app_absent=0" target="_blank" rel="noopener noreferrer">Whatsapp: +55 71 991792684</a></li>
       <li> <a href="https://github.com/joaoquinto" target="_blank" rel="noopener noreferrer">Github: @joaoquinto</a></li>
       <li><a href="https://www.linkedin.com/in/joaoouinto/" target="_blank" rel="noopener noreferrer">Meu LinkedIn
