Novo projeto - Fylo

--- a/index.html
+++ b/index.html
@@ -388,6 +388,26 @@
           </ul>
         </li>
       </ul>
+      <ul class="container-card" title="Esse é um desafio da plataforma frontend mentor.">
+        <li>
+          <a href="https://joaoquinto.github.io/fylo/" target="_blank" rel="noopener noreferrer">
+            <img class="img-card img-card-hover" src="./assets/icons/icon-fylo.svg" alt="Fylo é um desafio da plataforma frontendmentor">
+          </a>
+        </li>
+        <li>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/fylo" target="_blank" rel="noopener noreferrer">
+              Fylo
+            </a>
+          </h3>
+        </li>
+        <li>
+          <ul class="container-infos">
+            <li><strong>HTML5</strong></li>
+            <li><strong>Stylu</strong></li>
+          </ul>
+        </li>
+      </ul>
     </div>
 
   </section>
