Adicionando Stylus logo

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
       </li>
 
       <li class="item-lista">
+        <a href="https://stylus-lang.com/" target="_blank" rel="noopener noreferrer">
+          <img title="Stylus" src="./assets/icons/Stylus.svg" alt="Logo do pré-processador de estilo CSS" class="img-habilidade-hover">
+        </a>
+      </li>
+
+      <li class="item-lista">
         <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank" rel="noopener noreferrer">
           <img title="JavaScript" src="./assets/icons/javascript.svg" alt="Logo da linguagem javascript" class="img-habilidade-hover">
         </a>
@@ -404,7 +410,7 @@
         <li>
           <ul class="container-infos">
             <li><strong>HTML5</strong></li>
-            <li><strong>Stylu</strong></li>
+            <li><strong>Stylus</strong></li>
           </ul>
         </li>
       </ul>
