adicionando novo projeto

--- a/index.html
+++ b/index.html
@@ -414,6 +414,27 @@
           </ul>
         </li>
       </ul>
+      <ul class="container-card" title="Esse é um desafio da plataforma frontend mentor.">
+        <li>
+          <a href="https://joaoquinto.github.io/sunnyside-agency-landing-page/" target="_blank" rel="noopener noreferrer">
+            <img class="img-card img-card-hover" src="https://raw.githubusercontent.com/joaoquinto/sunnyside-agency-landing-page/main/assets/images/mobile/image-gallery-orange.jpg" alt="Fylo é um desafio da plataforma frontendmentor">
+          </a>
+        </li>
+        <li>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/fylo" target="_blank" rel="noopener noreferrer">
+              Sunnyside
+            </a>
+          </h3>
+        </li>
+        <li>
+          <ul class="container-infos">
+            <li><strong>HTML5</strong></li>
+            <li><strong>Stylus</strong></li>
+            <li><strong>JavaScript</strong></li>
+          </ul>
+        </li>
+      </ul>
     </div>
 
   </section>
