--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
         </li>
         <li>
           <h3 class="title-card">
-            <a href="https://github.com/joaoquinto/fylo" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/joaoquinto/sunnyside-agency-landing-page" target="_blank" rel="noopener noreferrer">
               Sunnyside
             </a>
           </h3>
