--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
       <ul class="container-card" title="Esse é um desafio da plataforma frontend mentor.">
         <li>
           <a href="https://joaoquinto.github.io/sunnyside-agency-landing-page/" target="_blank" rel="noopener noreferrer">
-            <img class="img-card img-card-hover" src="https://raw.githubusercontent.com/joaoquinto/sunnyside-agency-landing-page/main/assets/images/mobile/image-gallery-orange.jpg" alt="Fylo é um desafio da plataforma frontendmentor">
+            <img class="img-card img-card-hover" src="https://raw.githubusercontent.com/joaoquinto/sunnyside-agency-landing-page/main/assets/images/image-gallery-orange.jpg" alt="Sunnyside é um desafio da plataforma frontendmentor">
           </a>
         </li>
         <li>
@@ -473,7 +473,7 @@
       <li> <a href="https://github.com/joaoquinto" target="_blank" rel="noopener noreferrer">Github: @joaoquinto</a></li>
       <li><a href="https://www.linkedin.com/in/joaoouinto/" target="_blank" rel="noopener noreferrer">Meu LinkedIn
         </a></li>
-      <li><a href="https://docs.google.com/document/d/1j8QpPgyo1kaxeX9Eh_s550RW0OmBAmRzAJoM3V0doKg/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Meu Currículo</a></li>
+      <li><a href="https://docs.google.com/document/d/1j8QpPgyo1kaxeX9Eh_s550RW0OmBAmRzAJoM3V0doKg/edit?usp=sharing" target="_blank" rel="noopener noreferrer" download>Meu Currículo</a></li>
     </ul>
   </section>
   <footer>
