adicionando novos projetos

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
       <ul class="container-card" title="Esse é um desafio da plataforma frontend mentor.">
         <li>
           <a href="https://joaoquinto.github.io/sunnyside-agency-landing-page/" target="_blank" rel="noopener noreferrer">
-            <img class="img-card img-card-hover" src="https://raw.githubusercontent.com/joaoquinto/sunnyside-agency-landing-page/main/assets/images/mobile/image-gallery-orange.jpg" alt="Fylo é um desafio da plataforma frontendmentor">
+            <img class="img-card img-card-hover" src="https://raw.githubusercontent.com/joaoquinto/sunnyside-agency-landing-page/main/assets/images/image-gallery-orange.jpg" alt="Fylo é um desafio da plataforma frontendmentor">
           </a>
         </li>
         <li>
@@ -431,6 +431,48 @@
           <ul class="container-infos">
             <li><strong>HTML5</strong></li>
             <li><strong>Stylus</strong></li>
+            <li><strong>JavaScript</strong></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="container-card" title="Essa é uma API de dados de filmes">
+        <li>
+          <a href="https://joaoquinto.github.io/OMDB/" target="_blank" rel="noopener noreferrer">
+            <img class="img-card img-card-hover" src="./assets/icons/omdb.png" alt="OMDB é uma API que retorna dados de filmes">
+          </a>
+        </li>
+        <li>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/OMDB" target="_blank" rel="noopener noreferrer">
+              OMDB API
+            </a>
+          </h3>
+        </li>
+        <li>
+          <ul class="container-infos">
+            <li><strong>HTML5</strong></li>
+            <li><strong>Vue.js</strong></li>
+            <li><strong>JavaScript</strong></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="container-card" title="Essa é uma API de dados sobre a animação Final Space">
+        <li>
+          <a href="https://joaoquinto.github.io/finalSpace/index.html" target="_blank" rel="noopener noreferrer">
+            <img class="img-card img-card-hover" src="https://finalspaceapi.com/api/character/avatar/mooncake.jpg" alt="Essa é uma API de dados sobre a animação Final Space">
+          </a>
+        </li>
+        <li>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/OMDB" target="_blank" rel="noopener noreferrer">
+              Final Space API
+            </a>
+          </h3>
+        </li>
+        <li>
+          <ul class="container-infos">
+            <li><strong>HTML5</strong></li>
+            <li><strong>Vue.js</strong></li>
             <li><strong>JavaScript</strong></li>
           </ul>
         </li>
